Mobile: going out of box fixed.  Cover photo adjusted.

--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,16 @@ b {
   text-align: center;
 }
 
+/* cover image */
+.cover-container img {
+  width: 100%;
+  height: auto;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
 /* Blog Figures */
 .blog-figure {
   float: right;
@@ -1195,6 +1205,19 @@ mjx-container {
 
   figure.figure figcaption {
     font-size: 0.75rem;
+  }
+
+  .cover-container img {
+    transform: scale(2.2);
+    object-position: center;
+    padding-top: 7%;
+    padding-bottom: 10%;
+  }
+
+  .media iframe {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
   }
 
   /* Progress bars */
